<resources>
    <string name="app_name">NumberMachine</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="store_s_name">Please Enter Your Store\'s Name</string>
    <string name="Submit">Submit</string>
    <string name="name">Name</string>
    <string name="filter_title_viewgizmos">label</string>
    <string name="button">Button</string>
    <string name="QRbtn">Next</string>
    <string name="QRview">Store Name</string>
    <string name="comeBtn">Come</string>
    <string name="numbertext">Now The Number \n is</string>
    <string name="umberCnt">001</string>
    <string name="numberCome">Number:</string>
    <string name="numberCom">001</string>
</resources>
