<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kengyu.httpconnect.store.QRcode">

    <Button
        android:id="@+id/button2"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:text="@string/QRbtn"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="320dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/QRview"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        android:textSize="30sp"
        android:textColor="#0000FF"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ContentDescription"
        app:layout_constraintHorizontal_bias="0.041"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView3"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numbertext"
        android:textSize="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        android:layout_marginLeft="207dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.057"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        tools:ignore="RtlHardcoded,SpUsage"
        android:layout_marginStart="207dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="358dp"
        android:layout_height="48dp"
        android:layout_marginBottom="39dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/comeBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="357dp"
        android:text="@string/numberCome"
        android:textColor="#FF00FF"
        android:textSize="40sp"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintVertical_bias="0.47"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/umberCnt"
        android:textSize="30sp"
        android:textColor="#FF0000"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numberCom"
        android:textSize="50sp"
        android:textColor="#FF0000"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="RtlHardcoded"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="8dp" />
    <View
        android:layout_width="368dp"
        android:layout_height="5dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="130dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.855"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
